Novas alterações e nova página

--- a/study.html
+++ b/study.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proffy | Sua plataforma de estudos online</title>
-    <link rel="stylesheet" href="./Styles/main.css">
-    <link rel="stylesheet" href="./Styles/partials/page-study.css">
+
+    <link rel="stylesheet" href="/Styles/main.css">
+    <link rel="stylesheet" href="/Styles/partials/header.css">
+    <link rel="stylesheet" href="/Styles/partials/forms.css">
+    <link rel="stylesheet" href="/Styles/partials/page-study.css">
+    
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
 </head>
@@ -70,7 +74,10 @@
                     </div>
                 </header>
 
-                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.</p>
+                <p>Entusiasta das melhores tecnologias de química avançada.<br>
+                <br>Apaixonado por explodir coisas em laboratório e por mudar a vida 
+                das pessoas através de experiências. Mais de 200.000 pessoas já passaram 
+                por uma das minhas explosões.</p>
 
                 <footer>
                     <p>Preço/hora<strong>R$ 20,00</strong>
@@ -91,7 +98,10 @@
                     </div>
                 </header>
 
-                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.</p>
+                <p>Entusiasta das melhores tecnologias de química avançada.<br>
+                <br>Apaixonado por explodir coisas em laboratório e por mudar a vida 
+                das pessoas através de experiências. Mais de 200.000 pessoas já passaram 
+                por uma das minhas explosões.</p>
 
                 <footer>
                     <p>Preço/hora<strong>R$ 20,00</strong>
@@ -102,7 +112,6 @@
                 </footer>
             </article>
         </main>
-
     </div>
     
 </body>
