--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#8257E5">
+
+    
     
     <title>Proffy | Sua plataforma de estudos online</title>
 
-    <link rel="shortcut" href="./images/favicon.png" type="image/png">
+    <link rel="shortcut" href="/images/favicon.png" type="image/png">
 
     <link rel="stylesheet" href="/Styles/main.css">
     <link rel="stylesheet" href="/Styles/partials/page-landing.css">
